--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "commander": "~1.1.1",
     "dargs": "^5.1.0",
     "fs": "0.0.1-security",
+    "jira-connector": "^3.1.0",
     "moment": "^2.24.0",
     "nodemailer": "^6.4.6",
     "openurl": "^1.1.0",
