--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "fix": "npm run lint -- --fix"
   },
   "dependencies": {
+    "@types/jest": "^25.2.1",
     "alasql": "^0.4.11",
     "async": "^2.6.3",
     "cheerio": "^1.0.0-rc.3",
